--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
 
             <p>Hemingway wrote <cite>The Sun Also Rises</cite>.</p>
         </section>
+
+        <section>
+            <h1>Week03 Day01</h1>
+
+            <p>This is <strong>my</strong> Week Three paragraph. I'm using a <b>p</b> tag.</p>
+
+            <p>Faulkner wrote <cite>Tender is the Night</cite>.</p>
+        </section>
     </body>
 </html>
