--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <p>This is <strong>my</strong> Week Three paragraph. I'm using a <b>p</b> tag.</p>
 
-            <p>Faulkner wrote <cite>Tender is the Night</cite>.</p>
+            <p>Faulkner wrote <cite>Tender is the Night</cite> and <cite>The Great Gatsby</cite>.</p>
         </section>
     </body>
 </html>
