--- a/week03-day02.html
+++ b/week03-day02.html
@@ -1,13 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Week03 Day02</title>
-    </head>
+</head>
 
-    <body>
+<body>
+
    <h1>Week Three Day Two</h1>
-    </body>
+
+   <p>This is random work from <b>class</b> on wednesday.</p>
+
+   <h2>List Tests</h2>
+
+   <ul>
+       <li>Item One</li>
+       <li>Item Two</li>
+       <li>Item Three</li>
+   </ul>
+</body>
 </html>
+
