--- a/week03-day02.html
+++ b/week03-day02.html
@@ -17,9 +17,17 @@
 
    <ul>
        <li>Item One</li>
-       <li>Item Two</li>
+       <li>Item Two
+           <ul>
+               <li>Sub Item</li>
+           </ul>
+       </li>
        <li>Item Three</li>
    </ul>
+
+   <h2>Anchors</h2>
+
+   <a href="index.html">Home</a>
 </body>
 </html>
 
