--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     </head>
 
     <body>
+<section>
+    <h1>Toc</h1>
+
+    <ul>
+        <li><a href="Week03-Day02.html">Week03-Day02</a></li>
+    </ul>
+</section>
+
         <section>
             <h1>Hello World</h1>
 
