--- a/week03-day02.html
+++ b/week03-day02.html
@@ -27,7 +27,11 @@
 
    <h2>Anchors</h2>
 
-   <a href="index.html">Home</a>
+   <ul>
+       <li><a href="https://www.google.com/" target="_blank">Google</a></li>
+       <li><a href="index.html">Home</a></li>
+   </ul>
+
 </body>
 </html>
 
