--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Toc</h1>
 
     <ul>
-        <li><a href="Week03-Day02.html">Week03-Day02</a></li>
+        <li><a href="Week03-Day02.html">Week Three Day Two</a></li>
     </ul>
 </section>
 
