--- a/week03-day02.html
+++ b/week03-day02.html
@@ -32,6 +32,10 @@
        <li><a href="index.html">Home</a></li>
    </ul>
 
+   <h2>Images</h2>
+
+   <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/68/Mount_Rainier_7431.JPG/640px-Mount_Rainier_7431.JPG" alt="">
+
 </body>
 </html>
 
