--- a/Resume.html
+++ b/Resume.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<h1><b>Jiayi Xu</b></h1>
+<h1>Jiayi Xu</h1>
 <img src="https://bc.instructure.com/files/103866395/download?download_frd=1&verifier=ilWmEg9ZzjZfaLlTZlsw8joyzfp5c6zwMIyy6Ghf" 
      alt="My photo for resume" width="192" height="256" class="align-right medium">
 <p>123 456th Ave SE Bellevue,WA 98007 <br>
@@ -20,17 +20,17 @@
    Web:<a href="https://jiayixu1005.github.io">Jiayi's Github</a></p>
 
 <hr>
-<h4><b>Summary</b></h4>
-<p>
+<h2>Summary</h2>
+
     <ul>
         <li>Recent graduate of Bellevue College with Medical Administrative Assistant Certification & Associate of Applied Science - Transfer Degree in Allied Health</li>
         <li>A four-year Bachelor Degree of Information Management & Information System</li>
         <li>Excellent communication and organizing skills; highly-motivated with a can-do attitude; super quick leaner</li>
 </ul>
-</p>
+
 <hr>
-<h4><b>Skills</b></h4>
-<p>
+<h2>Skills</h2>
+
     <ul>
         <li>Microsoft office: Word, PowerPoint, Excel, Outlook</li>
         <li>EHR software: Medcin, Medisoft</li>
@@ -39,51 +39,60 @@
         <li>Individual & Group counseling</li>
         <li>Multicultural Development</li>
     </ul>
-</p>
+
 <hr>
-<h4><b>Experience</b></h4>
-<p>
-    <h5><b>School Bookstore Clerk (part time)</b></h5>
+<h2>Experience</h2>
+
+    <h3>School Bookstore Clerk (part time)</h3>
     Bellevue College, Bellevue, WA......................Spring 2015 - Present
+
     <ul>
         <li>Help student to find books and school supplies they need</li>
         <li>Organizing bookstore environment</li>
         <li>Provide professional customer service and answering questions in person and phone call</li>
     </ul>
-    <h5><b>OIE New students’ orientation volunteer (quarterly)</b></h5>
+
+    <h3>OIE New students’ orientation volunteer (quarterly)</h3>
     Bellevue College, Bellevue, WA......................Spring 2016 - Present
+
     <ul>
         <li>Help new international students get used to the college life</li>
         <li>Display college and office functions</li>
     </ul>
-    <h5><b>Employee of Wanda Group, AMC Theaters</b></h5>
+
+    <h3>Employee of Wanda Group, AMC Theaters</h3>
     Tsingtao, China......................Winter 2012 – Winter 2013
+
     <ul>
         <li>Provide excellent customer service as member of the theater staff</li>
         <li>Gained “Professional & Excellent Employer of the Year” in 2013</li>
     </ul>
-    <h5><b>Au pair</b></h5>
+
+    <h3>Au pair</h3>
     Frankfurt & Aachen & Hamburg, Germany......................Winter 2011- Winter 2012
+
     <ul>
         <li>Provide healthcare and daily care for young kids</li>
         <li>Communication with multiculturalism and teaching Chinese</li>
         <li>House organizing</li>
     </ul>
-</p>
+
 
 <hr>
-<h4><b>Education</b></h4>
-<p>
+<h4>Education</h4>
+
     <b>Medical Administrative Assistant Certification& Associate of Applied Science, Summer 2017</b><br>
     Bellevue College, Bellevue, WA
+
     <ul>
         <li>Coursework includes: Human Biology, Intercultural Communication, Survey of Nutrition, Medical Computer Systems</li>
         <li>Planning to enroll into the Bachelor of Applied Science in Healthcare Informatics at Bellevue College in Fall 2017</li>
     </ul>
+
     <b>Bachelor Degree of Information Management& Information System, Summer 2011</b><br>
     Tsingtao Navy Submarine Academy, Tsingtao, China
 
-</p>
+
 </body>
 
 </html>
