Adding Resume to index html

--- a/index.html
+++ b/index.html
@@ -31,5 +31,13 @@
 
             <p>Faulkner wrote <cite>Tender is the Night</cite> and <cite>The Great Gatsby</cite>.</p>
         </section>
+
+        <section>
+            <h1>My Resume</h1>
+            <ul>
+                <li><a href="resume.html">Resume</a></li>
+            </ul>
+
+        </section>
     </body>
 </html>
