--- a/JavaScriptTest/ListButton/index.html
+++ b/JavaScriptTest/ListButton/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>List Button</title>
     <script src="index.js"></script>
+    <script src="elf-code.js"></script>
     
 </head>
 
 <body>
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
+    <button id="add-to-list" type="button">Add to list</button>
+
 </body>
 
 </html>
