Adding My Theme

--- a/JavaScriptTest/ListButton/index.html
+++ b/JavaScriptTest/ListButton/index.html
@@ -14,6 +14,9 @@
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
     <button id="add-to-list" type="button">Add to list</button>
+    <ul>
+        <li><button id="add-to-list" type="button">My list</button></li>
+    </ul>
 
 </body>
 
