Adding buttonlist style and about page

--- a/JavaScriptTest/ListButton/index.html
+++ b/JavaScriptTest/ListButton/index.html
@@ -5,19 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>List Button</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="index.js"></script>
     <script src="elf-code.js"></script>
     
 </head>
 
 <body>
+    <header>
+        <h1 class="foo">Button List</h1>
+        <p>Show how to style Button and Respond to Button Checks</p>
+        <p class="byline">By Jiayi Xu</p>
+    </header>
+
+<main>
+    
     <input type="text" name="list-data" id="list-data">
     <button id="set-text" type="button">Set Text</button>
     <button id="add-to-list" type="button">Add to list</button>
+    <ul id="my-list"></ul>
+
+    <h1 id="new-point">New Point I</h1>
+    <figure>
+            <img id="list-button-utah" src="https://cdn.pixabay.com/photo/2017/04/07/00/55/utah-2209805_960_720.jpg" alt="Picture of Utah">
+            <figcaption>Utah picture.</figcaption>
+    </figure>
+    <p>Some Text.</p>
+    <h1 class="foo">New Point II</h1>
+
+</main>
+
+<footer>
+
+    <P>&copy; Jiayi Xu</P>
     <ul>
-        <li><button id="add-to-list" type="button">My list</button></li>
+        <li><a href="about.html">About</a></li>
     </ul>
 
+</footer>
 </body>
 
 </html>
