--- a/index.html
+++ b/index.html
@@ -39,5 +39,12 @@
             </ul>
 
         </section>
+
+        <section>
+            <h1>Image</h1>
+            <ul>
+                <li><a href="download-image.html">Download Image</a></li>
+            </ul>
+        </section>
     </body>
 </html>
