--- a/theme/index.html
+++ b/theme/index.html
@@ -17,7 +17,7 @@
      waned following the war and the Captain America comic book was discontinued in 1950, with a short-lived revival in 1953. Since Marvel 
      Comics revived the character in 1964, Captain America has remained in publication.</p>
 
-<img src="http://media.nj.com/entertainment_impact/photo/10357300-large.gif" alt="Cover of First of Captain America Comicbook">
+<img src="../images/10357300-large.gif" alt="Cover of First of Captain America Comicbook">
 
 </body>
 </html>
