--- a/theme/index.html
+++ b/theme/index.html
@@ -5,19 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Theme</title>
+    <link rel="stylesheet" href="themestyles.css">
 </head>
 
 <body>
-    <h1>Captain America</h1>
+    <header>
+        <h1>Captain America</h1>
+        <p class="byline">by Jiayi Xu</p>
+    </header>
+   
+<main>
 
     <p>Captain America is a fictional superhero appearing in American comic books published by Marvel Comics. 
-     Created by cartoonists Joe Simon and Jack Kirby, the character first appeared in Captain America Comics #1 (cover dated March 1941) 
-     from Timely Comics, a predecessor of Marvel Comics. Captain America was designed as a patriotic supersoldier who often fought 
-     the Axis powers of World War II and was Timely Comics' most popular character during the wartime period. The popularity of superheroes 
-     waned following the war and the Captain America comic book was discontinued in 1950, with a short-lived revival in 1953. Since Marvel 
-     Comics revived the character in 1964, Captain America has remained in publication.</p>
+       Created by cartoonists Joe Simon and Jack Kirby, the character first appeared in Captain America Comics #1 (cover dated March 1941) 
+        from Timely Comics, a predecessor of Marvel Comics. Captain America was designed as a patriotic supersoldier who often fought 
+         the Axis powers of World War II and was Timely Comics' most popular character during the wartime period. The popularity of superheroes 
+         waned following the war and the Captain America comic book was discontinued in 1950, with a short-lived revival in 1953. Since Marvel 
+         Comics revived the character in 1964, Captain America has remained in publication.</p>
+         <figure>
+                <img id="Theme-image" src="../images/10357300-large.gif" alt="Cover of First of Captain America Comicbook">
+                <figcaption>Cover of First of Captain America Comicbook</figcaption>
+        </figure>
+</main>
 
-<img src="../images/10357300-large.gif" alt="Cover of First of Captain America Comicbook">
+<footer>
+    
+    <P>&copy; Jiayi Xu</P>
+    <ul>
+        <li><a href="about.html">About</a></li>
+    </ul>
+
+</footer>
+
 
 </body>
 </html>
