--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -19,21 +19,52 @@
         <p class="byline">By Jiayi Xu</p>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="#click-buttons">Click Buttons</a></li>
+            <li><a href="#more-information">More Information</a></li>
+        </ul>
+    </nav>
+
 <main>
+
+    <section>
+        <h1 id="click-buttons">Clicking Buttons</h1>
+        <input type="text" name="list-data" id="list-data">
+        <button id="set-text" type="button">Set Text</button>
+        <button id="add-to-list" type="button">Add to list</button>
+        <ul id="my-list"></ul>
     
-    <input type="text" name="list-data" id="list-data">
-    <button id="set-text" type="button">Set Text</button>
-    <button id="add-to-list" type="button">Add to list</button>
-    <ul id="my-list"></ul>
+        <h1 id="new-point">New Point I</h1>
+        <figure>
+                <img id="list-button-utah" src="https://cdn.pixabay.com/photo/2017/04/07/00/55/utah-2209805_960_720.jpg" alt="Picture of Utah">
+                <figcaption>Utah picture.</figcaption>
+        </figure>
+        <p>
+            Some Text.
+        </p>
 
-    <h1 id="new-point">New Point I</h1>
-    <figure>
-            <img id="list-button-utah" src="https://cdn.pixabay.com/photo/2017/04/07/00/55/utah-2209805_960_720.jpg" alt="Picture of Utah">
-            <figcaption>Utah picture.</figcaption>
-    </figure>
-    <p>Some Text.</p>
-    <h1 class="foo">New Point II</h1>
+        <h1 class="foo">New Point II</h1>
+    </section>
 
+    <section>
+        <h2 id="more-information">More Information</h2>
+        <p>
+            Some Text.
+        </p>
+    </section>
+
+    <section>
+        <h2>Yet More Information</h2>
+        <p>
+            Some Text.
+        </p>
+    </section>
+
+    <section>
+        <h2>Another Set of Information</h2>
+        <p>Some Text.</p>
+    </section>
 </main>
 
 <footer>
