--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <ul>
         <li><a href="Week03-Day02.html">Week Three Day Two</a></li>
+        <li><a href="ListButton/index.html">List Button</a></li>
+        <li><a href="theme">My Theme</a></li>
     </ul>
 </section>
 
