adding box in listbutton

--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -28,6 +28,14 @@
 
 <main>
 
+    <h2>In class Button Box Model</h2>
+
+    <button class="test-button" type="button">test button</button>
+
+    <div id="margin-div">
+        <button class="margin-button" type="button">margin button</button>
+    </div>
+
     <section>
         <h1 id="click-buttons">Clicking Buttons</h1>
         <input type="text" name="list-data" id="list-data">
@@ -49,6 +57,9 @@
 
     <section>
         <h2 id="more-information">More Information</h2>
+        <aside>
+            This is my aside that I'm wrting in class on Thrusday near the end of our two hours.
+        </aside>
         <p>
             Some Text.
         </p>
