adding box and aside

--- a/ListButton/index.html
+++ b/ListButton/index.html
@@ -30,11 +30,16 @@
 
     <h2>In class Button Box Model</h2>
 
-    <button class="test-button" type="button">test button</button>
+    <button class="btn-padding" type="button">A Button with Padding</button>
 
-    <div id="margin-div">
-        <button class="margin-button" type="button">margin button</button>
+    <div class="margin-div">
+        <button class="margin-button" type="button">A Button with margin</button>
     </div>
+
+    <div class="elf-div-border">
+        <button class="btn-margin-padding">A Button with Margin and Padding</button>
+    </div>
+
 
     <section>
         <h1 id="click-buttons">Clicking Buttons</h1>
