starting on wed

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 
     <body>
 <section>
-    <h1>Toc</h1>
+    <h1>Index</h1>
 
     <ul>
         <li><a href="Week03-Day02.html">Week Three Day Two</a></li>
         <li><a href="ListButton/index.html">List Button</a></li>
         <li><a href="theme">My Theme</a></li>
+        <li><a href="for-loops/index.html">Learn for loops</a></li>
+
     </ul>
 </section>
 
