--- a/for-loops/index.html
+++ b/for-loops/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Learn for loops</title>
     <link rel="stylesheet" href="../ListButton/styles.css">
-    <link rel="stylesheet" href="../css/elf-buttons.css">
+    <script src="../ListButton/lib/elf-code.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
