--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <ul>
         <li><a href="Week03-Day02.html">Week Three Day Two</a></li>
         <li><a href="ListButton/index.html">List Button</a></li>
-        <li><a href="theme">My Theme</a></li>
+        <li><a href="theme/index.html">My Theme</a></li>
         <li><a href="for-loops/index.html">Learn for loops</a></li>
 
     </ul>
