--- a/theme/index.html
+++ b/theme/index.html
@@ -18,77 +18,26 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#Origin">Origin of Captain America</a></li>
-        <li><a href="#Status">Legal Status</a></li>
-        <li><a href="#Ability">Ability of Captain America</a></li>
+        <li><a href="../theme/origin of Captain America/origin.html">Origin of Captain America</a></li>
+        <li><a href="../theme/legal Status/status.html">Legal Status</a></li>
+        <li><a href="../theme/fictional character biography/biography.html">Fictional Character Biography</a></li>
+        <li><a href="../theme/publication history/history.html">Publication History</a></li>
+        <li><a href="../theme/ability of Captain America/ability.html">Ability of Captain America</a></li>
     </ul>
 </nav>
 
 <main>
 
-    <section id="Origin">
-        <h1>Origin of Captain America</h1>
-        <p>Captain America is a fictional superhero appearing in American comic books published by Marvel Comics. 
-           Created by cartoonists Joe Simon and Jack Kirby, the character first appeared in Captain America Comics #1 (cover dated March 1941) 
-            from Timely Comics, a predecessor of Marvel Comics. Captain America was designed as a patriotic supersoldier who often fought 
-             the Axis powers of World War II and was Timely Comics' most popular character during the wartime period. The popularity of superheroes 
-             waned following the war and the Captain America comic book was discontinued in 1950, with a short-lived revival in 1953. Since Marvel 
-             Comics revived the character in 1964, Captain America has remained in publication.</p>
-             <figure>
-                    <img id="Theme-image" src="../images/10357300-large.gif" alt="Cover of First of Captain America Comicbook">
-                    <figcaption>Cover of First of Captain America Comicbook</figcaption>
-            </figure>
-    </section>
-
-    <section id="Status">
-        <h1>Legal Status</h1>
-        <p>
-            In 1966 Joe Simon sued the owners of Marvel Comics, asserting that he—not Marvel—was legally entitled to renew the copyright upon 
-            the expiration of the original 28-year term. The two parties settled out of court, with Simon agreeing to a statement that the character
-            had been created under terms of employment by the publisher, and therefore it was work for hire owned by them.In 1999, Simon filed to claim 
-            the copyright to Captain America under a provision of the Copyright Act of 1976 which allowed the original creators of works that had been sold
-            to corporations to reclaim them after the original 56-year copyright term (but not the longer term enacted by the new legislation) had expired.
-            Marvel Entertainment challenged the claim, arguing that the settlement of Simon's 1966 suit made the character ineligible for termination of 
-            the copyright transfer. Simon and Marvel settled out of court in 2003, in a deal that paid Simon royalties for merchandising and licensing use 
-            of the character.       
-        </p>
-    </section>
-
-    <section id="Ability">
-        <h1>Ability</h1>
-        <p>
-            Captain America has no superhuman powers, but through the Super-Soldier Serum and "Vita-Ray" treatment, he is transformed and his strength, 
-            endurance, agility, speed, reflexes, durability, and healing are at the zenith of natural human potential. Rogers' body regularly replenishes 
-            the super-soldier serum; it does not wear off.
-
-            Although he lacks superhuman strength, Captain America is one of the few mortal beings who has been deemed worthy enough to wield Thor's hammer Mjolnir.
-        </p>
-        <h2>Tactician and field commander</h2>
-        <p>
-            Rogers' battle experience and training make him an expert tactician and an excellent field commander, with his teammates frequently deferring to 
-            his orders in battle. Thor has stated that Rogers is one of the very few humans he will take orders from and follow "through the gates of Hades".
-            Rogers' reflexes and senses are extraordinarily keen. He has blended Aikido, Boxing, Judo, Karate, Jujutsu, Kickboxing, and gymnastics into his 
-            own unique fighting style and is a master of multiple martial arts. Years of practice with his near-indestructible shield make him able to aim and
-            throw it with almost unerring accuracy. His skill with his shield is such that he can attack multiple targets in succession with a single throw or 
-            even cause a boomerang-like return from a throw to attack an enemy from behind. In canon, he is regarded by other skilled fighters as one of the best 
-            hand-to-hand combatants in the Marvel Universe, limited only by his human physique. Although the super-soldier serum is an important part of his strength, 
-            Rogers has shown himself still sufficiently capable against stronger opponents, even when the serum has been deactivated reverting him to his 
-            pre-Captain America physique.
-
-            Rogers has vast U.S. military knowledge and is often shown to be familiar with ongoing, classified Defense Department operations. 
-            He is an expert in combat strategy, survival, acrobatics, parkour, military strategy, piloting, and demolitions. Despite his high profile 
-            as one of the world's most popular and recognizable superheroes, Rogers has a broad understanding of the espionage community, largely through 
-            his ongoing relationship with S.H.I.E.L.D.
-        </p>
-        <h2>Super-Soldier Serum</h2>
-        <p>
-                The formula enhances all of his metabolic functions and prevents the build-up of fatigue poisons in his muscles, giving him endurance far in excess of 
-                an ordinary human being. This accounts for many of his extraordinary feats, including bench pressing 1,200 pounds (540 kg) and running a mile (1.6 km) in 73 seconds 
-                (49 mph/78 kph, nearly twice the maximum speed achieved by the best human sprinters). Furthermore, his enhancements are the reason why he was able to survive being 
-                frozen in suspended animation for decades. He is highly resistant to hypnosis or gases that could limit his focus.
-        </p>
-        
-    </section>
+<section>
+    <h1>The Evolution of Captain America's Suit in Comics</h1>
+    <figure>
+        <img src="../images/evolution-of-Captian-america.jpg" alt="Evolution-of-Captian-America-Comics" width="1024" height="700">
+    </figure>
+    <h2>The Evolution of Captain America's Suit in MUC</h2>
+    <figure>
+        <img src="../images/evolution of cap's suit in muc.jpg" alt="Evolution-of-Captian-America-MUC" width="1024" height="600">
+    </figure>
+</section>
 </main>
 
 <footer>
