adding functions-basics

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <li><a href="ListButton/index.html">List Button</a></li>
         <li><a href="theme/index.html">My Theme</a></li>
         <li><a href="for-loops/index.html">Learn for loops</a></li>
+        <li><a href="./JavaScriptTest/week07-day01.html">Week07 Day01 in Class</a></li>
+        <li><a href="./JavaScriptTest/function-basics.html">Function Basics</a></li>
 
     </ul>
 </section>
