--- a/JavaScriptTest/function-basics.html
+++ b/JavaScriptTest/function-basics.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Function Basics</title>
-    <script src="function-basics.js"></script>
+
 </head>
 
 <body>
@@ -14,6 +14,14 @@
     <p id="simple-function"></p>
     <p id="function-parameters"></p>
     <p id="function-return"></p>
+    <p id="show-user-input"></p>
+
+    <input type="text" name="user-input" id="user-input">
+
+    <button id="function-calls" type="button">Call Functions</button>
+    <button id="call-user-input" type="button">Call User Input</button>
+    
+    <script src="function-basics.js"></script>
 
 
 </body>
