adding useful links

--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Week02 Day01</title>
-        <link rel="stylesheet" href="Style.css">
-    </head>
 
-    <body>
-<section>
-    <h1>Index</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Home Page</title>
+    <link rel="stylesheet" href="Style.css">
+</head>
 
-    <ul>
-        <li><a href="Week03-Day02.html">Week Three Day Two</a></li>
-        <li><a href="ListButton/index.html">List Button</a></li>
-        <li><a href="theme/index.html">My Theme</a></li>
-        <li><a href="for-loops/index.html">Learn for loops</a></li>
-        <li><a href="./JavaScriptTest/week07-day01.html">Week07 Day01 in Class</a></li>
-        <li><a href="./JavaScriptTest/function-basics.html">Function Basics</a></li>
+<body>
+    <header>
+        <h1>My Home Page</h1>
+        <p class="byline">by Jiayi Xu</p>
+    </header>
 
-    </ul>
-</section>
+
+    <nav>
+        <h1>Index</h1>
+        <ul>
+            <li><a href="Week03-Day02.html">Week Three Day Two</a></li>
+            <li><a href="ListButton/index.html">List Button</a></li>
+            <li><a href="theme/index.html">My Theme</a></li>
+            <li><a href="for-loops/index.html">Learn for loops</a></li>
+            <li><a href="./JavaScriptTest/week07-day01.html">Week07 Day01 in Class</a></li>
+            <li><a href="./JavaScriptTest/function-basics.html">Function Basics</a></li>
+            <li><a href="./useful-links.html">Useful-Links</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section>
+            <h1>My Resume</h1>
+            <ul>
+                <li><a href="resume.html">Resume</a></li>
+            </ul>
+
+        </section>
+
+        <section>
+            <h1>Image</h1>
+            <ul>
+                <li><a href="download-image.html">Download Image</a></li>
+            </ul>
+        </section>
 
         <section>
             <h1>Hello World</h1>
@@ -38,19 +60,17 @@
             <p>Faulkner wrote <cite>Tender is the Night</cite> and <cite>The Great Gatsby</cite>.</p>
         </section>
 
-        <section>
-            <h1>My Resume</h1>
-            <ul>
-                <li><a href="resume.html">Resume</a></li>
-            </ul>
+    </main>
 
-        </section>
+    <footer>
 
-        <section>
-            <h1>Image</h1>
-            <ul>
-                <li><a href="download-image.html">Download Image</a></li>
-            </ul>
-        </section>
-    </body>
+        <P>&copy; Jiayi Xu</P>
+        <ul>
+            <li><a href="about.html">About</a></li>
+        </ul>
+
+    </footer>
+
+</body>
+
 </html>
