adding function-input

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="./JavaScriptTest/week07-day01.html">Week07 Day01 in Class</a></li>
             <li><a href="./JavaScriptTest/function-basics.html">Function Basics</a></li>
             <li><a href="./useful-links.html">Useful-Links</a></li>
+            <li><a href="./JavaScriptTest/function-input.html">Function Input</a></li>
         </ul>
     </nav>
 
