--- a/JavaScriptTest/function-input.html
+++ b/JavaScriptTest/function-input.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Function Input</title>
     <script src="function-input.js"></script>
+    <link rel="stylesheet" href="function-input.css">
 </head>
 
 <body>
