adding objects-choices.html'

--- a/JavaScriptTest/object-choices.html
+++ b/JavaScriptTest/object-choices.html
@@ -7,6 +7,11 @@
     <title>Object-Choices</title>
     <script src="./object-choices.js"></script>
 </head>
+<header>
+    <h1>Learn about JavaScript Objects</h1>
+    <p>Here you will find examples of how to use carious types of JavaScript Objects</p>
+</header>
+
 <body>
     
     <p>Get Name: <span id='getNamesDisplay'></span> </p>
