--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="./JavaScriptTest/function-basics.html">Function Basics</a></li>
             <li><a href="./useful-links.html">Useful-Links</a></li>
             <li><a href="./JavaScriptTest/function-input.html">Function Input</a></li>
+            <li><a href="./JavaScriptTest/object-choices.html">Object-Choices</a></li>
         </ul>
     </nav>
 
