--- a/JavaScriptTest/object-choices.html
+++ b/JavaScriptTest/object-choices.html
@@ -7,12 +7,23 @@
     <title>Object-Choices</title>
     <script src="./object-choices.js"></script>
 </head>
+
 <header>
-    <h1>Learn about JavaScript Objects</h1>
-    <p>Here you will find examples of how to use carious types of JavaScript Objects</p>
+    <h1>Object Choices</h1>
 </header>
 
 <body>
+
+    <p><span id='simple-object-display'></span></p>
+    <p><span id='function-object-display'></span></p>
+    <p><span id='custom-class-display'></span></p>
+
+
+    <button id='simple-object-action' type="button">Simple Object</button>
+    <button id='function-object-action' type="button">Function Object</button>
+    <button id='custom-class-action' type="button">Custom Class</button>
+
+
     
     <p>Get Name: <span id='getNamesDisplay'></span> </p>
     <p>Get Full Name: <span id='getFullNameDisplay'></span> </p>
