--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="./useful-links.html">Useful-Links</a></li>
             <li><a href="./JavaScriptTest/function-input.html">Function Input</a></li>
             <li><a href="./JavaScriptTest/object-choices.html">Object-Choices</a></li>
+            <li><a href="./JavaScriptTest/javascript-arrays.html">JavaScript Arrays</a></li>
         </ul>
     </nav>
 
