from class css for final
from class css for final

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
-    <link rel="stylesheet" href="Style.css">
+    <!--<link rel="stylesheet" href="Style.css">-->
+    <link href="basic.css" rel="alternate stylesheet" type="text/css" id="basic">
+    <link href="Style.css" rel="stylesheet" type="text/css" id="default">
+    <script src="./ListButton/lib/css-swap.js"></script>
+
+
 </head>
 
 <body>
@@ -61,6 +66,8 @@
             <p>This is <strong>my</strong> Week Three paragraph. I'm using a <b>p</b> tag.</p>
 
             <p>Faulkner wrote <cite>Tender is the Night</cite> and <cite>The Great Gatsby</cite>.</p>
+
+            <button id='appearanceAction' type="button">Change Appearance</button>
         </section>
 
     </main>
