adding more colors

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <li><a href="./JavaScriptTest/function-input.html">Function Input</a></li>
             <li><a href="./JavaScriptTest/object-choices.html">Object-Choices</a></li>
             <li><a href="./JavaScriptTest/javascript-arrays.html">JavaScript Arrays</a></li>
+            <li><a href="./JavaScriptTest/radio-choices.html"></a>Radio Choices</li>
         </ul>
     </nav>
 
