--- a/JavaScriptTest/radio-choices.html
+++ b/JavaScriptTest/radio-choices.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Radio-Choices</title>
-    <script src="radio-choices.js"></script>
-    <link rel="stylesheet" href="elf-button.css">
+    <script src="./radio-choices.js"></script>
+    <link rel="stylesheet" href="./elf-button.css">
 </head>
 <header>
     <h1>Radio-Choices</h1>
@@ -28,20 +28,20 @@
                 <legend>Our Form</legend>
                 <!-- OUR FORM GOES HERE -->
                 <form id="sort-type" action="goThere">
-                    <input type="radio" id="rank" name="sorter" value="Rank" checked>
-                    <label for="rank">Rank</label>
+                    <input type="radio" id="blue" name="sorter" value="Blue" checked>
+                    <label for="blue">Blue</label>
+                
+                    <input type="radio" id="green" name="sorter" value="Green">
+                    <label for="green">Green</label>
 
-                    <input type="radio" id="language" name="sorter" value="Language">
-                    <label for="language">Language</label>
+                    <input type="radio" id="red" name="sorter" value="Red">
+                    <label for="red">Red</label>
 
-                    <input type="radio" id="status" name="sorter" value="Status">
-                    <label for="status">Status</label>
+                    <input type="radio" id="yellow" name="sorter" value="Yellow">
+                    <label for="yellow">Yellow</label>
 
-                    <input type="radio" id="category" name="sorter" value="Category">
-                    <label for="category">Category</label>
-
-                    <input type="radio" id="downloads" name="sorter" value="Downloads">
-                    <label for="downloads">Downloads</label>
+                    <input type="radio" id="purple" name="sorter" value="Purple">
+                    <label for="purple">Purple</label>
 
                     <div>
                         <input class="btn-padding" type="submit" value="Submit">
@@ -55,7 +55,7 @@
 
         <P>&copy; Jiayi Xu</P>
         <ul>
-            <li><a href="about.html">About</a></li>
+            <li><a href="/index.html">Home</a></li>
         </ul>
 
     </footer>
