--- a/JavaScriptTest/radio-choices.html
+++ b/JavaScriptTest/radio-choices.html
@@ -23,7 +23,7 @@
             </fieldset>
         </section>
 
-        <section>
+        <section id="form-section">
             <fieldset>
                 <legend>Our Form</legend>
                 <!-- OUR FORM GOES HERE -->
