--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="basic.css" rel="alternate stylesheet" type="text/css" id="basic">
     <link href="Style.css" rel="stylesheet" type="text/css" id="default">
     <script src="./ListButton/lib/css-swap.js"></script>
+    <link rel="shortcut icon" type="Image/png" href="./favicon.png"/>
 
 
 </head>
@@ -33,7 +34,7 @@
             <li><a href="./JavaScriptTest/function-input.html">Function Input</a></li>
             <li><a href="./JavaScriptTest/object-choices.html">Object-Choices</a></li>
             <li><a href="./JavaScriptTest/javascript-arrays.html">JavaScript Arrays</a></li>
-            <li><a href="./JavaScriptTest/radio-choices.html"></a>Radio Choices</li>
+            <li><a href="./JavaScriptTest/radio-choices.html">Radio Choices</a></li>
         </ul>
     </nav>
 
