--- a/theme/about.html
+++ b/theme/about.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>About</title>
-    <link rel="stylesheet" href="styles.css">
+    <!--<link rel="stylesheet" href="styles.css">-->
+    <link href="../basic.css" rel="alternate stylesheet" type="text/css" id="basic">
+    <link href="../Style.css" rel="stylesheet" type="text/css" id="default">
+    <script src="../ListButton/lib/css-swap.js"></script>
+    <link rel="shortcut icon" type="Image/png" href="./favicon.png"/>
+
 </head>
 
 <body>
