--- a/theme/about.html
+++ b/theme/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,27 +10,29 @@
     <link href="../basic.css" rel="alternate stylesheet" type="text/css" id="basic">
     <link href="../Style.css" rel="stylesheet" type="text/css" id="default">
     <script src="../ListButton/lib/css-swap.js"></script>
-    <link rel="shortcut icon" type="Image/png" href="./favicon.png"/>
+    <link rel="shortcut icon" type="Image/png" href="./favicon.png" />
 
 </head>
 
 <body>
 
     <header>
-    <h1>About</h1>
-    <p></p>
-    <p class="byline">By Jiayi Xu</p>
-</header>
+        <h1>About</h1>
+        <p></p>
+        <p class="byline">By Jiayi Xu</p>
+    </header>
 
-<main>
+    <main>
+        <button id='appearanceAction' type="button">Change Appearance</button>
 
-</main>
+    </main>
 
-<footer>
+    <footer>
 
-<P>&copy; Jiayi Xu</P>
+        <P>&copy; Jiayi Xu</P>
 
-</footer>
+    </footer>
 
 </body>
+
 </html>
